docs/tinySelf.bnf
root : expression |
       expression END_OF_EXPR |
       expression END_OF_EXPR root



expression : literals |
             message |
             cascade |
             obj |
             block |
             RETURN expression |
             OBJ_START message OBJ_END |
             COMMENT expression |
             expression COMMENT |
             COMMENT

literals: SELF, strings, NUMBER

strings : SINGLE_Q_STRING | DOUBLE_Q_STRING

message : unary_message | binary_message | keyword_msg

unary_message : expression IDENTIFIER |
                IDENTIFIER

binary_message : expression OPERATOR expression |
                 expression ASSIGNMENT expression

keyword_msg : FIRST_KW expression |
              expression FIRST_KW expression |
              FIRST_KW expression kwd |
              expression FIRST_KW expression kwd

kwd : KEYWORD expression |
      KEYWORD expression kwd

cascade : message CASCADE message |
          message CASCADE cascade

slot_name : IDENTIFIER

slot_definition : slot_name |
                  slot_name ASSIGNMENT expression |
                  slot_name RW_ASSIGNMENT expression |
                  ARGUMENT

slot_kwd : KEYWORD IDENTIFIER |
           KEYWORD IDENTIFIER slot_kwd

slot_definition : kw_slot_name ASSIGNMENT expression |
                  op_slot_name ASSIGNMENT expression |
                  slot_definition END_OF_EXPR |
                  slot_definition END_OF_EXPR slot_definition

kw_slot_name : FIRST_KW IDENTIFIER |
               FIRST_KW IDENTIFIER slot_kwd

op_slot_name : OPERATOR IDENTIFIER |
               ASSIGNMENT IDENTIFIER

obj : OBJ_START OBJ_END |
      OBJ_START SEPARATOR OBJ_END |
      OBJ_START SEPARATOR SEPARATOR OBJ_END |
      OBJ_START SEPARATOR code OBJ_END')  # doesn't work - wh |
      OBJ_START SEPARATOR SEPARATOR code OBJ_END |
      OBJ_START slot_definition SEPARATOR OBJ_END |
      OBJ_START SEPARATOR slot_definition SEPARATOR OBJ_END |
      OBJ_START slot_definition SEPARATOR code OBJ_END |
      OBJ_START SEPARATOR slot_definition SEPARATOR code OBJ_END

block : BLOCK_START BLOCK_END |
        BLOCK_START SEPARATOR BLOCK_END |
        BLOCK_START SEPARATOR SEPARATOR BLOCK_END |
        BLOCK_START code BLOCK_END |
        BLOCK_START SEPARATOR SEPARATOR code BLOCK_END |
        BLOCK_START slot_definition SEPARATOR BLOCK_END |
        BLOCK_START SEPARATOR slot_definition SEPARATOR BLOCK_END |
        BLOCK_START slot_definition SEPARATOR code BLOCK_END |
        BLOCK_START SEPARATOR slot_definition SEPARATOR code BLOCK_END

code : expression |
       expression END_OF_EXPR |
       expression END_OF_EXPR code
